# pyfallback

./: .gitignore  README.md  pyproject.toml
.github/workflows/: unittests.yml
fallback/: fallback.py
pyfallback/: __init__.py  fallback.py
tests/: test_fallback.py
