[tool.poetry]
name = "pyfallback"
version = "0.1.0"
description = "Provides fallback for operations in python"
homepage = "https://github.com/weilueluo/pyfallback"
repository = "https://github.com/weilueluo/pyfallback"
keywords = ["fallback", "pyfallback"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
authors = ["Weilue Luo <luoweilue@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^22.12.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
